--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,29 @@
-name: Deploy
+name: Publish on Deno Deploy
+
 on:
   push:
-    branches: main
-  pull_request:
-    branches: main
+    branches: [main]
 
 jobs:
-  deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
-
     permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
+      id-token: write
+      contents: read
 
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
 
-      - name: Install Deno
+      - name: Setup Deno environment
         uses: denoland/setup-deno@v2
-        with:
-          deno-version: v2.x
 
-      - name: Build step
-        run: "deno task build"
+      - name: Build site
+        run: deno task build
 
-      - name: Upload to Deno Deploy
+      - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "timpost-lume-infima-55"
-          entrypoint: "serve.ts"
-          root: ""
-          
-          
+          project: lume-infima
+          import-map: "./deno.json"
+          entrypoint: serve.ts
