--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "timpost-lume-infima-55"
-          entrypoint: "serve.ts"
+          entrypoint: "src/serve.ts"
           root: "/"
