Forgot that specifying root breaks relative paths on GH. <shrug>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
         with:
           project: "timpost-lume-infima-55"
           entrypoint: "src/serve.ts"
-          root: "/"
+          root: ""
