--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "timpost-lume-infima-55"
+          project: "dreamydocs"
           entrypoint: "src/serve.ts"
           root: ""
