--- a/src/_data.yml
+++ b/src/_data.yml
@@ -1,6 +1,6 @@
 lang: en
 title: Dreamy Docs
-slogan: A Cushy Infima-Based Documentation Theme For Lume
+slogan: A Cushy Infima-Based Documentation Theme For Lume.
 metas:
   site: Dreamy Docs
   description: "=slogan"
