general cleanup of yesterday's progress

--- a/src/_data.yml
+++ b/src/_data.yml
@@ -1,5 +1,5 @@
 lang: en
 slogan: A "Cushy" Infima-Based Content Theme For Lume.
 metas:
-  site: Cushy Content
+  site: Cushy Text
   generator: true
