--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -2,8 +2,7 @@ hero:
   title: Cushy Text ++
   href: /features/
   cta: Check Out The Components & Features!
-  slogans:
-    - A "Cushy" component-driven, text-focused theme for Lume based on Infima CSS.
+  slogan: A "Cushy" component-driven, text-focused theme for Lume based on Infima CSS.
 goals:
   - title: Be Component-Driven.
     body: |
