--- a/src/_data/navbar.yml
+++ b/src/_data/navbar.yml
@@ -2,10 +2,12 @@ top_nav:
   - type: "link"
     href: "/blog/"
     text: Blog & Changelog
+    title: Best Way To Stay Up To Date
 
   - type: "link"
     href: "/docs/"
     text: Documentation
+    title: Documentation for this theme, using this theme.
 
   - type: "menu"
     href: "/features/"
