blog: config update (also doing meta tag)

--- a/src/blog/_data.yml
+++ b/src/blog/_data.yml
@@ -1,7 +1,7 @@
 layout: layouts/post.vto
 tags:
- - "%blog"
-blog: 
+  - "%blog%"
+blog:
   basedir: /blog/
   title: Cushy Content blog
   sidebar: auto
