--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -20,7 +20,7 @@ goals:
     href: /blog/mdx-post.mdx
     cta: Other Interactive Ideas
 
-  - title: Accessible & Responsive
+  - title: Be Accessible & Responsive.
     body: |
        And translation-ready. Infima makes creating responsive sites very easy. Be
        sure reading is comfortable on any device, in whatever languages you want to offer.
