--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -1,7 +1,7 @@
 error_404:
-  title: Content Not Found
-  heading: Content Not Found
-  content: The requested page does not exist.
+  title: "Content Not Found"
+  heading: "Content Not Found"
+  content: "The requested page does not exist.""
 
 posts:
   has_tags: "Tags:"
