blog data: be explicit (in a comment) about the purpose of %blog%

--- a/src/blog/_data.yml
+++ b/src/blog/_data.yml
@@ -1,5 +1,6 @@
 layout: layouts/post.vto
 tags:
+  # This is a hidden "archetype" tag. See the docs before changing.
   - "%blog%"
 blog:
   basedir: /blog/
