--- a/src/_data/navbar.yml
+++ b/src/_data/navbar.yml
@@ -14,21 +14,13 @@ top_nav:
     text: Theme Features
     title: Many of these are currently broken ...
     links:
-      - text: Easy-to-Use Components
+      - text: Component And Archetype Driven
         href: /features/components/
-        title: A Detailed Overfview Of How Lume3 Components Are Used
+        title: A Detailed Overview Of How Lume3 Components Are Used
 
-      - text: Search With Batteries Included
-        href: /features/search/
-        title: Powered with Pagefind & Lume3 Middleware
-
-      - text: Content Rating System Included
+      - text: Interactive Features Included
         href: /features/interactive/
         title: Content rating system, form processing and more!
-
-      - text: Fully-Loaded Plugin Ensemble
-        href: /features/plugins/
-        title: Including OG Image Generation, SEO, More!
 
       - text: Ready For Translations
         href: /features/localization/
@@ -37,7 +29,3 @@ top_nav:
       - text: Responsive And Accessible
         href: /features/accessibility/
         title: Open Dyslexic if user prefers dyslexic-friendly font.
-
-      - text: SEO-Minded, Optimized & Fast!
-        href: /features/performance/
-        title: If no one can find it, who does it help?
