locale: blog strings

--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -35,6 +35,7 @@ blog_index:
   top_tags: "Recent Tags:"
   older_posts: "Older posts are "
   older_posts_link: "in the archive"
+  toc: "Table Of Contents:"
 
 comp:
   latestBlog:
