--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -20,7 +20,7 @@ goals:
       Take advantage of the middleware in Lume3 on Deno Deploy with DenoKV! Static doesn't have
       to mean stagnate. Comes with a content rating system and form handlers, no edge functions 
       needed!
-    href: /features/interactive/
+    href: /blog/interactive-feature-plans/
     cta: Other Interactive Ideas
 
   - title: Accessible & Responsive.
