--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "timpost-cushytext-92"
+          project: "cushydocs"
           entrypoint: "src/_serve.ts"
           root: ""
           
