locale: minor nit

--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -16,7 +16,7 @@ posts:
 documentation:
   next_link: "Next >>"
   prev_link: "<< Previous"
-  topics: "Other Topics:"
+  topics: "Available Topics:"
   toc_heading: "On This Page:"
 
 
