--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -18,8 +18,7 @@ goals:
   - title: Static, But Interactive!
     body: |
       Take advantage of the middleware in Lume3 on Deno Deploy with DenoKV! Static doesn't have
-      to mean stagnate. Comes with a content rating system and form handlers, no edge functions
-      needed!
+      to mean stagnate. Comes with a content rating system and form handlers!
     href: /blog/interactive-feature-plans/
     cta: Other Interactive Ideas
 
