--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -3,7 +3,7 @@
 hero:
   title: Cushy Text
   href: /blog/announcing-cushy-text/
-  cta: Read The Announcement Post &raquo;
+  cta: Read The Announcement
   slogan: An Infima-based, component-driven, text-focused interactive and accessible theme for Lume 3.
 
 goals:
