--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -1,7 +1,7 @@
 # Cushy Text Site Data
 # AKA Demo, since that's what it is to anyone else using it.
 hero:
-  title: Cushy Text
+  title: Cushy Text ☁️
   href: /blog/announcing-cushy-text/
   cta: Read The Announcement &raquo;
   slogan: An Infima-based, component-driven, text-focused interactive and accessible theme for Lume 3.
