Little splash of color and h/t to :Lume :)

--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -4,7 +4,7 @@ hero:
   title: Cushy Text ☁️
   href: /blog/announcing-cushy-text/
   cta: Read The Announcement &raquo;
-  slogan: An Infima-based, component-driven, text-focused interactive and accessible theme for Lume 3.
+  slogan: An Infima-based, component-driven, text-focused interactive and accessible theme for <span class="text--danger">Lume 3</span>.
 
 goals:
   - title: Comfortable To Build With.
