--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -27,7 +27,7 @@ documentation:
   topics: "Available Topics:"
   toc_heading: "On This Page:"
   no_custom_sidebars: "Custom Sidebars Are Not Yet Implemented"
-  feeds: "Docs Feeds:"
+  feeds: "Feed:"
 
 archive:
   heading: "Blog Archive"
