blog: greatly simplify /archive, eliminate  the stub template entirely

--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -41,6 +41,7 @@ archive:
   total_results: "total results."
   things_tagged: "Things Tagged"
   posts_by: "Posts By"
+  all_posts: "All Posts"
 
 blog_index:
   latest_heading: "Latest Posts From The"
