locale: shorten byline

--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -12,7 +12,7 @@ feeds:
 
 posts:
   has_tags: "Tagged:"
-  written_by: "Written By"
+  written_by: "By"
   written_on: "On"
   read_more: "Read More"
   read_time: "Minute Read"
