docs: properize bringing in "guest" post feeds from other sources in data.

--- a/src/docs/_data.yml
+++ b/src/docs/_data.yml
@@ -10,3 +10,8 @@ docs:
   # Right now auto is the only option. A way to pass a custom sidebar
   # is planned at some point.
   sidebar: auto
+  # Pull in posts from another waypoint?
+  guest:
+    heading: "From Our Blog:"
+    waypoint: "%blog%"
+    posts: 3
