--- a/src/_data/navbar.yml
+++ b/src/_data/navbar.yml
@@ -47,8 +47,12 @@ footer:
 
   - category: Community
     links:
+      - text: Theme Github Repository
+      - href: "https://github.com/timthepost/cushytext"
+
       - text: Cushy Text Discord Server
         href: "https://discord.gg/ETx8S8cWwH"
+
       - text: Lume Discord Server
         href: "https://discord.gg/YbTmpACHWB"
 
