content and nav updates

--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -24,7 +24,7 @@ goals:
 
   - title: Accessible & Responsive.
     body: |
-      And translation-ready. Infima makes creating responsive sites very easy. Be
-      sure reading is comfortable on any device, in whatever languages you want to offer.
+      And, translation-ready! Infima makes creating responsive sites very easy,
+      so that reading your content is as comfortable as it can be for as many as possible.
     href: /features/accessibility/
     cta: More About Accessibility
