--- a/src/_data.yml
+++ b/src/_data.yml
@@ -1,5 +1,6 @@
 lang: en
 slogan: A "Cushy" Infima-Based Content Theme For Lume.
+openGraphLayout: /layouts/og_images.jsx
 metas:
   site: Cushy Text
   generator: true
