--- a/src/_data/locale.yml
+++ b/src/_data/locale.yml
@@ -27,7 +27,7 @@ documentation:
   topics: "Available Topics:"
   toc_heading: "On This Page:"
   no_custom_sidebars: "Custom Sidebars Are Not Yet Implemented"
-  feeds: "Feed:"
+  feeds: "Feeds:"
 
 archive:
   heading: "All Posts"
@@ -51,7 +51,7 @@ blog_index:
   blog_home: "Blog Home"
   latest_heading: "Latest From The"
   latest_posts: "Latest Posts"
-  feeds: "<br />"
+  feeds: "/blog Feeds:"
   top_tags: "Recent Tags:"
   older_posts: '<span style="color:coral">Older posts are</span>'
   older_posts_link: "in the archive"
