--- a/src/_data/demo.yml
+++ b/src/_data/demo.yml
@@ -12,19 +12,19 @@ goals:
       Easy components. Easy interactive features. Just enough structure. Forgiving MDX lets
       you "just get it done" with an easy framework well-known for handling enormous amounts
       of text.
-    href: /features/components/
+    href: /features/#components
     cta: More On Components
 
   - title: Static, But Interactive!
     body: |
       Take advantage of the middleware in Lume3 on Deno Deploy with DenoKV! Static doesn't have
       to mean stagnate. Comes with a content rating system and form handlers!
-    href: /blog/interactive-feature-plans/
+    href: /features/#interactive
     cta: Other Interactive Ideas
 
   - title: Accessible & Responsive.
     body: |
       And, translation-ready! Infima makes creating responsive sites very easy,
       so that reading your content is as comfortable as it can be for as many as possible.
-    href: /features/accessibility/
+    href: /features/#responsive
     cta: More About Accessibility
